--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "sequelize": "^6.32.1",
+    "sequelize": "6.1.1",
     "sequelize-typescript": "^2.1.5"
   },
   "devDependencies": {
